<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CustomerDataEntry">

    <TextView
        android:id="@+id/prompt_to_enter_credits_purchased_id"
        android:text="@string/prompt_to_enter_credits_purchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/amount_of_credits_purchased_by_user_id"
        android:hint="@string/credits_purchased_by_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        bootstrapbutton:be_roundedCorners="true"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/credits_purchased_phone_number"
        android:hint="@string/credits_purchased_phone_number_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        bootstrapbutton:be_roundedCorners="true"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/button_to_submit_credits_purchased"
        android:text="@string/submit_credits_purchased_by_user"
        android:layout_width="match_parent"
        bootstrapbutton:bb_type="success"
        bootstrapbutton:bb_roundedCorners="true"
        android:layout_marginTop="10dp"
        android:layout_height="50dp" />
</LinearLayout>
