<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.robert.loyaltyclub.UsingCredits">
    <TextView
        android:id="@+id/using_credits_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/using_credits_prompt_text"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/enter_phone_number_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        bootstrapbutton:be_roundedCorners="true"
        android:hint="@string/prompt_to_enter_phone_number"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/enter_the_amount_of_credits_used"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        bootstrapbutton:be_roundedCorners="true"
        android:hint="@string/prompt_to_enter_credits_used"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/check_balance_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        bootstrapbutton:bb_type="primary"
        bootstrapbutton:bb_roundedCorners="true"
        android:layout_marginTop="10dp"
        android:text="@string/check_balance_button_text"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/using_credits_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        bootstrapbutton:bb_type="success"
        bootstrapbutton:bb_roundedCorners="true"
        android:text="@string/using_credits_prompt_text"/>

</LinearLayout>
